# facial_recognition_server

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  face_detect  prototype.cpp
include/: faceArray.h
src/: faceArray.cpp  main.cpp
